feat: save parsed items to files
